# cve_analyser

./: .gitignore  ARCHIVE.md  FETCHER_TODO.md  README.md  SKILL.md  SPEC.md  TODO.md  agent-cli.sh  cve-review.sh  go.mod  pyproject.toml  spawn-agent.sh  summary_report.json
SKILL/: cve-analyzer
config/: config.yaml
configs/: config.yaml
cve_analyzer/: __init__.py  cli.py
docs/: USAGE.md
knowledge/: example-rule.yaml
scripts/: cve-batch-agent.sh  cve-review.sh  cve_review.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_fetcher.py  (+4 more)
tools/cve-analyzer/: .gitignore  pyproject.toml
tools/cve-analyzer/archive/patch_agent/agent/: parser.py
tools/cve-analyzer/archive/patch_agent/knowledge/rules/: rule-003.yaml
tools/cve-analyzer/archive/patch_agent/llm/: analyzer.py  provider.py
tools/cve-analyzer/archive/specs/: phase10-llm-integration.md  phase7-report.md
tools/cve-analyzer/configs/: config.yaml
tools/cve-analyzer/cve_analyzer/: __init__.py
tools/cve-analyzer/cve_analyzer/analyzer/: version_impact.py
tools/cve-analyzer/cve_analyzer/core/: checkpoint.py  models.py
tools/cve-analyzer/cve_analyzer/fetcher/: normalizer.py  state.py
tools/cve-analyzer/cve_analyzer/kconfig/: __init__.py  auto_generator.py  loader.py
tools/cve-analyzer/cve_analyzer/llm/: base.py
tools/cve-analyzer/cve_analyzer/reporter/: __init__.py  base.py  models.py
tools/cve-analyzer/cve_analyzer/utils/: __init__.py  git.py
tools/cve-analyzer/tests/: test_git.py  test_utils.py  verify_real_data.py
tools/cve-analyzer/tests/sample_data/: cve_sample.json
(+162 files in other folders)
