[project]
name = "cve-analyzer"
version = "0.1.0"
description = "Linux 内核 CVE 漏洞分析工具 + Patch 影响分析 Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "requests>=2.31.0",
    "GitPython>=3.1.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
]

[project.scripts]
cve-analyzer = "cve_analyzer.cli:main"
patch-agent = "cve_analyzer.patch_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
